# MCBot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  message.py  message_subscribers.py  pyproject.toml  supervisord.conf  web_interface.py
qr_service/: main.py
qr_service/templates/: index.html
tests/: test_subscribers.py
